kubes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress 
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - atelier.run
    - logs.atelier.run
    secretName: atelier-run-key
  rules:
    - host: atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx 
                port: 
                  number: 80
    - host: logs.atelier.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zinc
                port:
                  number: 4080
